# tmdbwrapper

./: .gitignore  README.md  pyproject.toml
tmdbwrapper/: __init__.py  imdb.py  tmdb.py  tmdbmovie.py
