[project]
name = "tmdbwrapper"
version = "1.0.25"
description = "A wrapper package for getting provider URLs from JustWatch via info from the TMDB API."
authors = [ { name = "squash" } ]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp-socks",
  "requests[socks]",
  "rich",
  "simple-justwatch-python-api @ git+https://github.com/Electronic-Mango/simple-justwatch-python-api.git",
]

[tool.setuptools]
packages = ["tmdbwrapper"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
